force-app/main/default/objects/SEG_Marcasdeuncaso__c/SEG_Marcasdeuncaso__c.object-meta.xml
<CustomObject>
    <label>Marcas de un caso</label>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>Marcas de un caso ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Marcas de un caso</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>