force-app/main/default/objects/SEG_Marcasdeuncaso__c/fields/SEG_Caso__c.field-meta.xml
<CustomField>
    <fullName>SEG_Caso__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Caso</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Case.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>SEG_Cliente, SEG_Seguimiento</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Marcas de un caso</relationshipLabel>
    <relationshipName>Marcas_de_un_caso1</relationshipName>
    <type>Lookup</type>
</CustomField>