force-app/main/default/objects/SEG_Marcasdeuncaso__c/fields/SEG_Usuario__c.field-meta.xml
<CustomField>
    <fullName>SEG_Usuario__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Usuario</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Marcas_de_un_caso</relationshipName>
    <type>Lookup</type>
</CustomField>